feat: add business hours notices
